# KikoPlay

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  KikoPlay.metainfo.xml  KikoPlay.pro  README.md  build.pro  cmake_build.md  globalobjects.cpp  globalobjects.h  io.gitHub.KikoPlayProject.KikoPlay.desktop  io.github.KikoPlayProject.KikoPlay.desktop  io.github.KikoPlayProject.KikoPlay.metainfo.xml  io.github.KikoPlayProject.KikoPlay.xml  kikoplay.desktop  kikoplay.rc  kikoplay.xpm  linux.md  main.cpp  res.qrc  resource.h  vcpkg.json
.github/workflows/: build-package.yml
Common/: browser.cpp  browser.h  counter.cpp  counter.h  dbmanager.cpp  dbmanager.h  eventbus.cpp  eventbus.h  htmlparsersax.cpp  htmlparsersax.h  kcache.h  keyaction.cpp  keyaction.h  keyactionmodel.cpp  keyactionmodel.h  kstats.cpp  kstats.h  kupdater.cpp  kupdater.h  logger.cpp  logger.h  lrucache.h  network.cpp  network.h  notifier.cpp  notifier.h  regexmatcher.cpp  regexmatcher.h  taskpool.cpp  taskpool.h  threadtask.cpp  threadtask.h
Download/: aria2jsonrpc.cpp  aria2jsonrpc.h  autodownloadmanager.cpp  autodownloadmanager.h  dirselectwidget.cpp  dirselectwidget.h  downloaditemdelegate.cpp  downloaditemdelegate.h  downloadmodel.cpp  downloadmodel.h  peerid.h  peermodel.cpp  peermodel.h  torrent.cpp  torrent.h  trackersubscriber.cpp  trackersubscriber.h  util.cpp  util.h
Download/BgmList/: bgmlist.cpp  bgmlist.h
Download/Script/: scriptmanager.cpp  scriptmanager.h
Extension/App/: appframelessdialog.cpp  appframelessdialog.h  appmanager.cpp  appmanager.h  appstorage.cpp  appstorage.h  kapp.cpp  kapp.h
Extension/Common/: ext_common.cpp  ext_common.h  luatablemodel.cpp  luatablemodel.h
Extension/Lua/: CMakeLists.txt  Lua.pro
Extension/Modules/: lua_appcommondialog.cpp  lua_appcommondialog.h  lua_appevent.cpp  lua_appevent.h  lua_appimage.cpp  lua_appimage.h  lua_appnet.cpp  lua_appnet.h  lua_appui.cpp  lua_appui.h  lua_apputil.cpp  lua_apputil.h  lua_browser.cpp  lua_browser.h  lua_clipboardinterface.cpp  lua_clipboardinterface.h  lua_danmuinterface.cpp  lua_danmuinterface.h  lua_dir.cpp  lua_dir.h  lua_downloadinterface.cpp  lua_downloadinterface.h  lua_htmlparser.cpp  lua_htmlparser.h  lua_libraryinterface.cpp  lua_libraryinterface.h  lua_net.cpp  lua_net.h  lua_playerinterface.cpp  lua_playerinterface.h  lua_playlistinterface.cpp  lua_playlistinterface.h  lua_process.cpp  lua_process.h  lua_regex.cpp  lua_regex.h  lua_storageinterface.cpp  lua_storageinterface.h  lua_stringutil.cpp  lua_stringutil.h  (+8 more)
Extension/Script/: bgmcalendarscript.cpp  danmuscript.cpp  danmuscript.h  libraryscript.cpp  matchscript.cpp  matchscript.h  playgroundscript.cpp  resourcescript.cpp  scriptbase.cpp  scriptbase.h  scriptmanager.cpp  scriptmanager.h  scriptmodel.cpp  scriptmodel.h  scriptsettingmodel.cpp  scriptsettingmodel.h
LANServer/: apihandler.cpp  apihandler.h  filehandler.cpp  filehandler.h  httpserver.cpp  httpserver.h  lanserver.cpp  lanserver.h  mediahandler.cpp  mediahandler.h  router.cpp  router.h
LANServer/dlna/: dlnamediacontroller.cpp  dlnamediacontroller.h  dlnamediaitem.cpp  dlnamediaitem.h  dlnamediaserver.cpp  dlnamediaserver.h  upnp.cpp  upnp.h  upnpctrlpoint.cpp  upnpctrlpoint.h  upnpdevice.cpp  upnpdevice.h  upnpservice.cpp  upnpservice.h
LANServer/httpserver/: httpconnectionhandler.cpp  httpconnectionhandlerpool.cpp  httpcookie.cpp  httpcookie.h  httpglobal.h  httplistener.cpp  httplistener.h  httprequest.cpp  httprequesthandler.cpp  httpresponse.cpp  httpresponse.h  httpsession.cpp  httpsession.h  httpsessionstore.cpp  httpsessionstore.h  staticfilecontroller.cpp  staticfilecontroller.h
LANServer/qhttpengine/: basicauthmiddleware.h  filesystemhandler.h  handler.h  ibytearray.h  localauthmiddleware.h  localfile.h  middleware.h  parser.h  proxyhandler.h  qhttpengine_export.h  qiodevicecopier.h  qobjecthandler.h  range.h  server.h  (+1 more)
MediaLibrary/: animefilterproxymodel.cpp  animefilterproxymodel.h  animeinfo.cpp  animeinfo.h  animeitemdelegate.cpp  animeitemdelegate.h  animelibrary.cpp  animelibrary.h  animelistmodel.cpp  animelistmodel.h  animemodel.cpp  animemodel.h  animeprovider.cpp  animeprovider.h  animescantask.cpp  animescantask.h  animescrapingtask.cpp  animescrapingtask.h  animeworker.cpp  animeworker.h  capturelistmodel.cpp  capturelistmodel.h  episodeitem.cpp  episodeitem.h  episodesmodel.cpp  episodesmodel.h  labelitemdelegate.cpp  labelitemdelegate.h  labelmodel.cpp  labelmodel.h  tagnode.cpp  tagnode.h
Play/: playcontext.cpp  playcontext.h
Script/: bgmcalendarscript.cpp  bgmcalendarscript.h  danmuscript.cpp  danmuscript.h  libraryscript.cpp  libraryscript.h  lua.hpp  luatablemodel.cpp  luatablemodel.h  playgroundscript.cpp  playgroundscript.h  resourcescript.cpp  resourcescript.h  scriptbase.cpp  scriptbase.h  scriptlogger.cpp  scriptlogger.h  scriptmanager.cpp  scriptmanager.h  scriptmodel.cpp  scriptmodel.h  scriptsettingmodel.cpp  scriptsettingmodel.h
Service/: klogin.cpp  klogin.h  kregister.cpp  kregister.h  kservice.cpp  kservice.h
UI/: about.cpp  about.h  adddanmu.cpp  adddanmu.h  addpool.cpp  addpool.h  addrule.cpp  addrule.h  adduritask.cpp  adduritask.h  aliasedit.cpp  aliasedit.h  animebatchaction.cpp  animebatchaction.h  animedetailinfo.cpp  animedetailinfo.h  animedetailinfopage.cpp  animedetailinfopage.h  animeepisodeeditor.cpp  animeepisodeeditor.h  animeinfoeditor.cpp  animeinfoeditor.h  animescandialog.cpp  animescandialog.h  animesearch.cpp  animesearch.h  animeupdate.cpp  animeupdate.h  appbar.cpp  appbar.h  appmenu.cpp  appmenu.h  autodownloadwindow.cpp  autodownloadwindow.h  bangumisearch.cpp  bangumisearch.h  bangumiupdate.cpp  bangumiupdate.h  bgmlistwindow.cpp  bgmlistwindow.h  (+78 more)
flatpak/: README.md  io.github.KikoPlayProject.KikoPlay.metainfo.xml
lib/: libmpv.dll.lib  qhttpengine.lib  zlibstat.lib
newVersion/: version.json
res/: about  block.xml  mediainfo  mpvOptions  onAirSites.json  scriptPlayground  style.qss  style_bg.qss  style_bg_default.qss  tip  tracker.xml  translators.json  version.json
web/: README.md  index.html
(+438 files in other folders)
